@@ -9,7 +9,6 @@ examples/pwm.pl
 examples/temp_hum_display.pl
 FAQ-Tutorial.pod
 lib/RPi/WiringPi.pm
-lib/RPi/WiringPi/Board.pm
 lib/RPi/WiringPi/Interrupt.pm
 lib/RPi/WiringPi/LCD.pm
 lib/RPi/WiringPi/Pin.pm
